--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node --nolazy -r ts-node/register -r tsconfig-paths/register src/index.ts"
+    "start": "node --nolazy -r ts-node/register -r tsconfig-paths/register src/index.ts",
+    "pm2": "pm2 start src/pm2-windows.js --name='dc-kook-brdige'"
   },
   "author": "Hexona",
   "license": "MIT",
